xcordef. estHx case study work in progress

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -26,25 +26,27 @@ which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
 \section{Definitions}
 %======================================
 Here is a very limited overview of the definitions of $\Rxy(m)$:
-\\\defbox{\begin{array}{lM>{\ds}rc>{\ds}l}
-  \mc{5}{M}{References that put conjugate $\conj$ on $\rvy$:}
+%\\\defbox{\begin{array}{lM>{\ds}rc>{\ds}l}
+\begin{longtable}{ll>{$\ds}r<{$}>{$\ds}c<{$}>{$\ds}l<{$}}
+  \mc{5}{l}{References that put conjugate $\conj$ on $\rvy$:}
   \\&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &\eqd& E\brb{\rvx(m)\rvy^\ast(0)}
   \\&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &\eqd& E\brs{\rvx(m)\rvy^\ast(0)}
   \\&\citeP{matlab_xcorr}                    & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
   \\&\citeP{matlab_cpsd}                     & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
   \\
-  \mc{5}{M}{References that put conjugate $\conj$ on $\rvx$:}
+  \mc{5}{l}{References that put conjugate $\conj$ on $\rvx$:}
   \\&\citerpg{kay1988}{52}{8131733564}                    & r_{xy}[m] &\eqd& \mathcal{E}\brb{x^\ast[0]y[m]}
   \\&\citerpg{weisstein2002}{594}{1420035223}\footnotemark& f\star g  &\eqd& \int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
   \\&\citePpc{leuridan1986}{2}{(7)}                       & GXY_1     &\eqd& \sum X_1^\ast Y
   \\
-  \mc{5}{M}{References that use no conjugate $\conj$:}
+  \mc{5}{l}{References that use no conjugate $\conj$:}
   \\&\citerpg{bendat2010}{111}{1118210824}          & R_{xy}(m)            &\eqd& E\brs{\rvx(0)\rvy(m)}
   \\&\citerpg{helstrom1991}{369}{0023535717}        & \Rxy(t_1,t_2)        &\eqd& E[\rvx(t_1)\rvy(t_2)]
   \\&\citerpg{proakis1996}{A4}{0133737624}          & \gamma_{xy}(t_1,t_2) &\eqd& E(X_{t_1}Y_{t_2})
   \\&\citerpg{shin2008}{280}{0470725648}            & R_{xy}(\tau)         &\eqd& E[x(t)y(t+\tau)]
   \\&\citerpg{bracewell1978}{46}{007007013X}\footnotemark & g^\ast\star h  &\eqd& \int_{-\infty}^{\infty}g^\ast(u)h(u+x)\du   %{Pentagram notation for cross correlation}
-\end{array}}
+\end{longtable}
+%\end{array}}
 \addtocounter{footnote}{-1}
 \footnotetext{
   Bracewell and Weisstein here use the \ope{integral operator} $\int_{\R}\!\dx$ rather than the
@@ -139,99 +141,6 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
     \\&= \ZH(z) \Szxt(z)
       && \text{by property of the \ope{Z-transform}}                           && \text{by \xref{thm:opZ}}
 \end{align*}
-
-
-%\begin{align*}
-%    \Szty(z)
-%      &\eqd \opZ\pE\Rty(m)
-%      && \text{by definition of $\Szty(z)$}                                    && \text{\xref{def:Szxy}}
-%    \\&\eqd \opZ\pE\brs{\rvt(m)\rvy^\ast(0)}
-%      && \text{by Papoulis' definition of $\Rty(m)$}                           && \text{\xref{def:Rxym}}
-%    \\&=    \opZ\pE\brs{\rvt(m)\brp{\sum_{k\in\Z} \fh(k)\rvx(0-k)}^\ast}
-%      && \text{by \prope{LTI} property}                                        &&
-%    \\&=    \opZ\pE\brs{\rvt(m) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(0-k)}
-%      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s} && \text{\xref{def:staralg}}
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt(m)\rvx^\ast(0-k)}
-%      && \text{by \prope{linearity} of $\opE$}                                 && \text{\xref{thm:pE_linop}}
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt(0)\rvx^\ast(-m-k)}
-%      &&    \text{by \prope{wide sense stationary} property}                   &&
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \brp{\pE\brs{\rvx(-m-k)\rvt^\ast(0)}}^\ast
-%      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s} && \text{\xref{def:staralg}}
-%    \\&\eqd \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rxt^\ast(-m-k)
-%      && \text{by this definition of $\Rxy(m)$}                                &&
-%    \\&= \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rxt(m+k)
-%      && \text{by \prope{conjugate symmetric} property of $\Rxy(m)$}           && \text{\xref{cor:Rxym}}
-%    \\&= \opZ\brs{\fh^\ast(-m) \convd \Rxt(m)}
-%      && \text{by property of \ope{convolution}}                               && \text{\xref{prop:conv_knk}}
-%    \\&= \brs{\opZ\fh^\ast(-m)} \brs{\opZ\Rxt(m)}
-%      && \text{by \thme{convolution theorem}}                                  && \text{\xref{thm:conv}}
-%    \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxt\brp{z}}
-%      && \text{by property of the \ope{Z-transform}}                           && \text{by \xref{thm:opZ}}
-%    \\
-%    \Szxy(z)
-%      &\eqd \brlr{\Szty(z)}_{\rvt\eqd\rvx}
-%    \\&=    \brlr{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxt\brp{z}}_{\rvt\eqd\rvx}
-%    \\&=    \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
-%    \\
-%    \Szyy(z)
-%      &\eqd \brlr{\Szty(z)}_{\rvt\eqd\rvy}
-%    \\&=    \brlr{ \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxt\brp{z}}_{\rvt\eqd\rvy}
-%    \\&=    \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxy\brp{z}}
-%    \\&=    \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
-%\\
-%    \Szxy(z)
-%      &\eqd \opZ\Rxy(m)
-%      && \text{by definition of $\Szxy(z)$}                               && \text{\xref{def:Szxy}}
-%    \\&\eqd \opZ\pE\brs{\rvx(m)\rvy^\ast(0)}
-%      && \text{by Papoulis' definition of $\Rxy(m)$}                           && \text{\xref{def:Rxym}}
-%    \\&=    \opZ\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k)\rvx(0-k)}^\ast}
-%      && \text{by \prope{LTI} property}                                        &&
-%    \\&=    \opZ\pE\brs{\rvx(m) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(0-k)}
-%      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s} && \text{\xref{def:staralg}}
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(m)\rvx^\ast(0-k)}
-%      && \text{by \prope{linearity} of $\opE$}                                 && \text{\xref{thm:pE_linop}}
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(-m-k)}
-%      &&    \text{by \prope{wide sense stationary} property}                   &&
-%    \\&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \brp{\pE\brs{\rvx(-m-k)\rvx^\ast(0)}}^\ast
-%      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s} && \text{\xref{def:staralg}}
-%    \\&\eqd \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
-%      && \text{by this definition of $\Rxy(m)$}                                &&
-%    \\&= \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)
-%      && \text{by \prope{conjugate symmetric} property of $\Rxy(m)$}           && \text{\xref{cor:Rxym}}
-%    \\&\eqq \opZ\brs{\fh^\ast(-m) \convd \Rxx(m)}
-%      && \text{by property of \ope{convolution}}                               && \text{\xref{prop:conv_knk}}
-%    \\&= \opZ\brs{\fh^\ast(-m) \convd \Rxx(m)}
-%      && \text{by \prope{conjugate symmetric} property of $\Rxy(m)$}           && \text{\xref{cor:Rxym}}
-%    \\&= \brs{\opZ\fh^\ast(-m)} \brs{\opZ\Rxx(m)}
-%      && \text{by \thme{convolution theorem}}                                  && \text{\xref{thm:conv}}
-%    \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
-%      && \text{by property of the \ope{Z-transform}}                           && \text{by \xref{thm:opZ}}
-%    \\
-%    \Szyy(z)
-%      &\eqd \opZ\Ryy(m)
-%    \\&\eqd \opZ\pE\brs{\rvy(m)\rvy^\ast(0)}
-%    \\&=    \opZ\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvy^\ast(0)}
-%    \\&=    \opZ\brp{\sum_{k\in\Z} \fh(k)\pE\brs{\rvx(m-k)\rvy^\ast(0)}}
-%    \\&\eqd \opZ\brp{\sum_{k\in\Z} \fh(k)\Rxy(m-k)}
-%    \\&\eqd \opZ\brp{\fh(m)\convd\Rxy(m)}
-%    \\&=    \brs{\opZ\fh(m)}\brs{\opZ\Rxy(m)}
-%    \\&\eqd \boxed{\ZH(z) \Szxy(z)}
-%    \\&&&&&=    \boxed{\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
-%\end{align*}
-%
-%\begin{align*}
-%    \Szyy(z)
-%      &\eqd \opZ\Ryy(m)
-%     &&\eqd \opZ\pE\brs{\rvy(m)\rvy^\ast(0)}
-%     &&=    \opZ\pE\brs{\brp{\fh(m)\convd\rvx(m)}\rvy^\ast(0)}
-%    \\&=    \opZ\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvy^\ast(0)}
-%     &&=    \opZ\brp{\sum_{k\in\Z} \fh(k)\pE\brs{\rvx(m-k)\rvy^\ast(0)}}
-%     &&\eqd \opZ\brp{\sum_{k\in\Z} \fh(k)\Rxy(m-k)}
-%    \\&\eqd \opZ\brp{\fh(m)\convd\Rxy(m)}
-%     &&=    \brs{\opZ\fh(m)}\brs{\opZ\Rxy(m)}
-%     &&\eqd \boxed{\ZH(z) \Szxy(z)}
-%    \\&&&&&=    \boxed{\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
-%\end{align*}
 
 \begin{align*}
     \boxed{\Szxy(z)}
@@ -467,7 +376,36 @@ $\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D
 The other seven $\Swxy/\Swyy$ proofs follow in like manner.
 \end{proof}
 
-Note the following:
+
+%---------------------------------------
+\begin{proposition}
+\label{prop:RxySwxy_real}
+%---------------------------------------
+Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
+\\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
+\\
+$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
+    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+\end{array}$
+\end{proposition}
+\begin{proof}
+These results follow directly from \pref{prop:RxySwxy} and \prefpp{thm:dtft_conjneg_real}.
+\end{proof}
+
+%=======================================
+\section{Which one?}
+%=======================================
+Which definition of $\Rxy(m)$ should we use?
+Any one of them is perfectly acceptable---as long as a clear definition is provided and that definition is used consistently.
+That being said, note the following:
+
 \begin{enumerate}
 \item The \ope{expectation} operator $\pE\brp{\rvX\rvY^\ast}$ is an \fncte{inner product}.
 As such, it would seem the most natural to follow the convention of other inner product definitions
@@ -495,24 +433,4 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 \item If we follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$.
 \end{enumerate}
 
-%---------------------------------------
-\begin{proposition}
-\label{prop:RxySwxy_real}
-%---------------------------------------
-Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
-\\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
-\\
-$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
-    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(4) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-\end{array}$
-\end{proposition}
-\begin{proof}
-These results follow directly from \pref{prop:RxySwxy} and \prefpp{thm:dtft_conjneg_real}.
-\end{proof}
+
