--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1604,3 +1604,15 @@
   url          = {https://www.vibrationresearch.com/articles/fatigue_kurtosis.html},
   }
   
+@article{yates1963,
+  title        = {Ronald Aylmer Fisher, 1890--1962},
+  journal      = {Biographical Memoirs of Fellows of the Royal Society of London},
+  volume       = {9},
+  pages        = {90--120},
+  year         = {1963},
+  month        = {November},
+  author       = {Frank Yates and Kenneth Mather},
+  publisher    = {Royal Society of London},
+  url          = {https://doi.org/10.1098/rsbm.1963.0006},
+  note         = {print ISSN:0080-4606, online ISSN:1748-8494, \url{https://pdfs.semanticscholar.org/6ccd/4303f68f3543fc794c376ce00395947a79b6.pdf}},
+  }
