--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1803,7 +1803,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
       \FY-\FV &= \FQ = \estH\FP = \estH (\FX-\FU)
         && \text{by definition of $\estH$}
       \\\estH \FU-\FV &= \estH \FX-\FY
-        && \text{by \prope{left distributive} property of \ope{linear operator}s}
+        && \text{by \prope{left distributive} prop.} % of \ope{linear operator}s
         && \text{\xref{thm:L_LMN}}
       \\\pE\brp{\brs{\estH\FU-\FV}\brs{\estH\FU-\FV}^\ast} &= \pE\brp{\brs{\estH \FX-\FY}\brs{\estH \FX-\FY}^\ast}
       \\\abs{\estH}^2\Swuu - \estH\cancelto{0}{\Swuv} - \estH^\ast\cancelto{0}{\Swvu} + \Swvv
@@ -1858,7 +1858,7 @@ Let $\estHkp(\omega)$ be the transfer function estimate defined in \prefpp{def:H
       \boxed{0}
         &= \frac{1}{2}\fG^20 = \frac{1}{2}\fG^2\pderiv{}{\estH_R}\Swuu
         && \text{set $\pderiv{}{\estH_R}\Swuu=0$ to find optimum $\estH_R$}
-      \\&= \frac{1}{2}\fG^20 = \frac{1}{2}\fG^2\pderiv{}{\estH_R}\frac{\fF}{\fG}
+      \\&= \frac{1}{2}\fG^2\pderiv{}{\estH_R}\frac{\fF}{\fG}
         && \text{by \prefp{lem:estHk_Suu}}
       \\&= \frac{1}{2}\fG^2\frac{(\fF'\fG-\fG'\fF)}{\fG^2}
         && \text{by \thme{Quotient Rule}}
