--- a/common/xcordef.tex
+++ b/common/xcordef.tex
@@ -376,7 +376,35 @@ $\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D
 The other seven $\Swxy/\Swyy$ proofs follow in like manner.
 \end{proof}
 
-Note the following:
+%---------------------------------------
+\begin{proposition}
+\label{prop:RxySwxy_real}
+%---------------------------------------
+Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
+\\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
+\\
+$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
+    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+\end{array}$
+\end{proposition}
+\begin{proof}
+These results follow directly from \pref{prop:RxySwxy} and \prefpp{thm:dtft_conjneg_real}.
+\end{proof}
+
+%=======================================
+\section{Which one?}
+%=======================================
+Which definition of $\Rxy(m)$ should we use?
+Any one of them is perfectly acceptable---as long as a clear definition is provided and that definition is used consistently.
+That being said, note the following:
+
 \begin{enumerate}
 \item The \ope{expectation} operator $\pE\brp{\rvX\rvY^\ast}$ is an \fncte{inner product}.
 As such, it would seem the most natural to follow the convention of other inner product definitions
@@ -403,26 +431,3 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 
 \item If we follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$.
 \end{enumerate}
-
-%---------------------------------------
-\begin{proposition}
-\label{prop:RxySwxy_real}
-%---------------------------------------
-Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
-\\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
-\\
-$\begin{array}{Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}}
-    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(4) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-\end{array}$
-\end{proposition}
-\begin{proof}
-These results follow directly from \pref{prop:RxySwxy} and \prefpp{thm:dtft_conjneg_real}.
-\end{proof}
-
