--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -20,6 +20,26 @@
     image: & \url{http://en.wikipedia.org/wiki/Aristotle}
   \end{tabular}}
 
+\qboxnpq
+  {
+    Ronald A. Fisher, 
+    \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineG.html}{(1890--1962)}, 
+    Statistician,
+    at a lecture in 1958 at Michigan State University
+    \footnotemark
+  }
+  {../common/graphics/portraits/fisher_geneticsorg.jpg}
+  {We are quite in danger of sending highly trained and highly intelligent 
+  young men out into the world with tables of erroneous numbers under their arms, 
+  and with a dense fog in the place where their brains ought to be. 
+  In this century, of course, they will be working on guided missiles and advising the 
+  medical profession on the control of disease, 
+  and there is no limit to the extent to which they could impede every sort of national effort.}
+  \footnotetext{
+    quote:       \citePp{yates1963}{107}.
+    image:       \url{http://www.genetics.org/content/154/4/1419}
+    }
+
 %=======================================
 \section{Definitions}
 %=======================================
